fix header image z-index

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -12,6 +12,7 @@
   padding-right: 80px;
   position: relative;
   box-sizing: border-box;
+  z-index: 0;
 }
 
 .header__title {
@@ -40,7 +41,7 @@
 }
 
 .header__image {
-  z-index: 1;
+  z-index: -1;
   max-width: 646px;
   max-height: 568px;
   position: absolute;
